# piper-phonemize

./: CMakeLists.txt  Dockerfile
deploy/: Dockerfile
src/: main.cpp  test.cpp
